[package]
name = "gastropath"
version = "2.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.0", features = ["rustls"] }
actix-governor = "0.5"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
url = "2.3"
sha1 = "0.10"
lazy_static = "1.4"
log4rs = "1.2"

